--- a/src/sprites/convimg.yaml
+++ b/src/sprites/convimg.yaml
@@ -13,6 +13,8 @@ palettes:
       - color: {index: 3, r: 255, g: 0, b: 0}      # RED
       - color: {index: 4, r: 0, g: 255, b: 0}      # GREEN
       - color: {index: 5, r: 0, g: 0, b: 255}      # BLUE
+      - color: {index: 6, r: 128, g: 128, b: 128}  # GRAY1
+      - color: {index: 7, r: 64, g: 64, b: 64}     # GRAY2 (darker)
     images: automatic
 
 converts:
